src/test/ui/issues/issue-42344.nll.stderr
error[E0596]: cannot borrow `*TAB[..]` as mutable, as `TAB` is an immutable static item
  --> $DIR/issue-42344.rs:4:5
   |
LL |     TAB[0].iter_mut(); //~ ERROR cannot borrow data mutably in a `&` reference [E0389]
   |     ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
